Ignore Xcode user file

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory.opensdf
 Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory.sdf
 Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory.v12.suo
 Build/
+UserInterfaceState.xcuserstate
