--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory.sdf
 Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory.v12.suo
 Build/
 UserInterfaceState.xcuserstate
+Breakpoints_v2.xcbkptlist
