--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
@@ -13,9 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Tests">
-      <UniqueIdentifier>{b889785e-9454-45e8-8e99-f45c7e4f49f1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Libs">
       <UniqueIdentifier>{9f54667e-733b-4866-a04d-9d5f4f3d57eb}</UniqueIdentifier>
     </Filter>
@@ -24,6 +21,9 @@
     </Filter>
     <Filter Include="Assets\Gui">
       <UniqueIdentifier>{e4acba82-f939-4a6b-b369-4ad0b58c684f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="CatchTests">
+      <UniqueIdentifier>{5264d4d1-c136-425a-b529-f3ac408c2367}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -66,17 +66,17 @@
     <ClCompile Include="..\..\..\..\Source\Question.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Source\Tests\TestMain.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\Source\Tests\QuestionTests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\Source\GSTestShowScore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\Source\GSMusicalTerms.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\Source\Tests\Question_catchtest.cpp">
+      <Filter>CatchTests</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\Source\Tests\CatchTestMain.cpp">
+      <Filter>CatchTests</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
